# Welkinrim

./: .gitignore  404.html  CLAUDE.md  DEVELOPMENT.md  Motor_Matchmaker_PRD.md  QUICKSTART.md  README.md  VERSION  about.html  application-notes.html  asset-library.html  blog.html  careers.html  case-studies.html  certifications.html  configurator.css  configurator.html  configurator.js  contact.html  content-strategy.md  datasheets.html  distributors.html  faq.html  index.html  llms.txt  motor-database.js  motor-matchmaker.css  motor-matchmaker.html  motor-matchmaker.js  motor-selection-guide.html  news.html  package.json  partners.html  privacy.html  products.html  quote-wizard.js  resources.html  robots.txt  scripts.js  serve.py  (+9 more)
applications/: agriculture.html  defence.html  delivery.html  inspection.html  racing.html
assets/: placeholder-info.txt
compare/: welkinrim-vs-brotherhobby.html  welkinrim-vs-dji.html  welkinrim-vs-hobbywing.html  welkinrim-vs-mad-motors.html  welkinrim-vs-sunnysky.html  welkinrim-vs-tmotor.html
landing/: agriculture-spraying.html  commercial-delivery.html  defence-surveillance.html
motordrive/: CMakeLists.txt  README.md
motordrive/inc/: can_interface.h  config.h  esc_calibration.h  motor_control.h  pid_controller.h  pixhawk_interface.h  pwm_control.h
motordrive/src/: can_interface.c  esc_calibration.c  main.c  motor_control.c  pid_controller.c  pixhawk_interface.c  pwm_control.c
products/: agriculture-motors.html  commercial-motors.html  defence-motors.html  industrial-motors.html  micro-motors.html  motor-detail.js  product-catalog.js  product-page.js  product-pages.css  propulsion-systems.html
tools/: calculator.html  calculator.js  roi-calculator.html  tools.css
